Bug 71458 - polkitbackendsessionmonitor.c does not compile
Summary: polkitbackendsessionmonitor.c does not compile
Status: RESOLVED FIXED
Alias: None
Product: PolicyKit
Classification: Unclassified
Component: libpolkit (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: David Zeuthen (not reading bugmail)
QA Contact: David Zeuthen (not reading bugmail)
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-10 18:34 UTC by Xabier Rodríguez
Modified: 2013-11-12 08:24 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Patch (1.01 KB, text/plain)
2013-11-10 18:34 UTC, Xabier Rodríguez
Details
0001-Don-t-discard-error-data-returned-by-polkit_system_b.patch (1.11 KB, patch)
2013-11-11 22:53 UTC, Miloslav Trmac
Details | Splinter Review

Description Xabier Rodríguez 2013-11-10 18:34:18 UTC
Created attachment 88985 [details]
Patch

I don't have an freedesktop permissions to push it myself.
Comment 1 Colin Walters 2013-11-11 14:15:15 UTC
My fault, sorry about that, I wasn't building the ConsoleKit backend.  

Pushed to master.  Thanks very much for the patch!
Comment 2 Xabier Rodríguez 2013-11-11 15:02:10 UTC
(In reply to comment #1)
> My fault, sorry about that, I wasn't building the ConsoleKit backend.  
> 
> Pushed to master.  Thanks very much for the patch!

You are welcome. Now I realized that I should have added the bugzilla url to the commit description :)
Comment 3 Colin Walters 2013-11-11 15:24:15 UTC
(In reply to comment #2)
> Now I realized that I should have added the bugzilla url to
> the commit description :)

Please do in the future, but in this case the patch is self-justifying enough that it doesn't really matter.

Where the Bugzilla links become very valuable is more complex/less-obvious patches with longer debate history.
Comment 4 Miloslav Trmac 2013-11-11 22:53:27 UTC
Created attachment 89059 [details] [review]
0001-Don-t-discard-error-data-returned-by-polkit_system_b.patch

Shouldn't it be like this, consistent with the systemd variant?

(Only compile-tested on a systemd box.)
Comment 5 Colin Walters 2013-11-11 22:59:29 UTC
Comment on attachment 89059 [details] [review]
0001-Don-t-discard-error-data-returned-by-polkit_system_b.patch

Review of attachment 89059 [details] [review]:
-----------------------------------------------------------------

Yes, true.  I was too quick to review...  Looks good.
Comment 6 Miloslav Trmac 2013-11-11 23:20:27 UTC
Comment on attachment 89059 [details] [review]
0001-Don-t-discard-error-data-returned-by-polkit_system_b.patch

Review of attachment 89059 [details] [review]:
-----------------------------------------------------------------

Commited.
Comment 7 Xabier Rodríguez 2013-11-12 08:24:06 UTC
(In reply to comment #4)
> Created attachment 89059 [details] [review] [review]
> 0001-Don-t-discard-error-data-returned-by-polkit_system_b.patch
> 
> Shouldn't it be like this, consistent with the systemd variant?
> 
> (Only compile-tested on a systemd box.)

My bad, sorry. As the original call didn't use any other parameter I just checked that NULL in both places was harmless.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.