Don't discard error data returned by polkit_system_bus_name_get_user_sync

https://bugs.freedesktop.org/show_bug.cgi?id=71458